# dotfile

./: .ideavimrc  .prettierrc  .vimrc  README.md  update.sh
nuxt/: nuxt.config.ts
nvim/: init.lua  lazy-lock.json
nvim/after/lsp/: basedpyright.lua  eslint.lua  vtsls.lua
nvim/colors/: mytheme.lua
nvim/lua/config/: keymap.lua  lazy.lua  lsp.lua  options.lua  title.lua
nvim/lua/plugins/: airline.lua  auto-save.lua  auto-session.lua  bufferline.lua  coc.lua  code-enhance.lua  color-schemes.lua  conform.lua  dracula.lua  early-retirement.lua  easymotion.lua  git.lua  github-theme.lua  highlightedyank.lua  lazydocker.lua  lsconfig.lua  lualine.lua  markview.lua  mason-lsconfig.lua  mason.lua  maximize.lua  mini.lua  multicursor.lua  neo-tree.lua  neogit.lua  neotree.lua  nerdtree.lua  sort.lua  surround.lua  telescope.lua  todo-comments.lua  toggleterm.lua  ts-comments.lua  undotree.lua
nvim/lua/plugins/lsp/: conform.lua  lazydev.lua  lsp-file-operations.lua  mason-lspconfig.lua  mason-tool-installer.lua  schemastore.lua  treesitter.lua  venv-selector.lua
python/: poetry.toml  pyproject.toml
